# turtlefunt

./: .gitignore  README.md  pyproject.toml
src/turtlefunt/: __init__.py  colorbackground.py  colortext.py  palette.py  turtlefun_quotientlist.py  turtlefunt.py  turtlent.py
tests/: __init__.py  test_colorbackground.py  test_colortext.py  test_turtlent.py  test_turtlepalette.py  turtle_originreturnsamples.py  turtlefun_lines_manual.py
